--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "trailingComma": "es5",
         "tabWidth": 4,
         "semi": true,
-        "singleQuote": false
+        "singleQuote": false,
+        "endOfLine": "lf"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" exit 1"
@@ -16,13 +17,13 @@
     "dependencies": {
         "@types/node": "^18.15.11",
         "chalk": "^4.1.2",
+        "discord.js": "^14.9.0",
         "jsonc-parser": "^3.2.0",
         "node": "^19.8.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.2"
     },
     "devDependencies": {
-        "prettier": "^2.8.7",
-        "ts-jest": "^29.0.5"
+        "prettier": "^2.8.7"
     }
 }
