--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
     "compilerOptions": {
         "esModuleInterop": true,
         "module": "CommonJS",
+        "target": "ESnext",
         "outDir": "build",
-        "sourceMap": true,
+        "sourceMap": true
     },
     "ts-node": {
         "files": true,
