--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "outDir": "target",
         "sourceMap": true,
         "moduleResolution": "node",
-        "incremental": true
+        "incremental": true,
+        "strict": true
     },
     "ts-node": {
         "files": true,
