--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,4 @@
 {
     "files.eol": "\n",
-    "cSpell.words": [
-        "channelmap",
-        "loggingchannel",
-        "popconfirm",
-        "readcursor",
-        "ringbuffer",
-        "unlogged"
-    ]
+    "cSpell.words": ["channelmap", "loggingchannel", "popconfirm", "readcursor", "ringbuffer", "unlogged"]
 }
