core: added mongo dep and basic k8s stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
     "files.eol": "\n",
-    "cSpell.words": ["channelmap", "loggingchannel", "popconfirm", "readcursor", "ringbuffer", "unlogged"]
+    "cSpell.words": [
+        "channelmap",
+        "loggingchannel",
+        "popconfirm",
+        "readcursor",
+        "ringbuffer",
+        "submod",
+        "turingbot",
+        "unlogged"
+    ]
 }
