factoids, misc: added core and standard(may be removed)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.eol": "\n",
     "cSpell.words": [
         "channelmap",
+        "INITDB",
         "loggingchannel",
         "popconfirm",
         "readcursor",
@@ -9,5 +10,8 @@
         "submod",
         "turingbot",
         "unlogged"
-    ]
+    ],
+    "yaml.schemas": {
+        "kubernetes://schema/apps/v1%40deployment": "file:///c%3A/Users/James%20Boehme/Documents/GitHub/TuringBot/k8s/dev.yaml"
+    }
 }
