--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
         "node": "^19.8.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.2",
+        "undici": "^5.22.1",
         "utf-8-validate": "^6.0.3",
         "zlib-sync": "^0.1.8"
     },
     "devDependencies": {
-        "prettier": "^2.8.7"
+        "prettier": "^2.8.7",
+        "ts-standard": "^12.0.2"
     }
 }
