--- a/k8s/dev.yaml
+++ b/k8s/dev.yaml
@@ -3,72 +3,72 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: mongodb
+  name: mongodb
 spec:
-    type: ClusterIP
-    selector:
-        name: mongodb
-    ports:
-        - port: 27017
-          targetPort: 27017
+  type: ClusterIP
+  selector:
+    name: mongodb
+  ports:
+    - port: 27017
+      targetPort: 27017
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: mongodb
+  labels:
     name: mongodb
-    labels:
-        name: mongodb
 spec:
-    selector:
-        matchLabels:
-            name: mongodb
-    template:
-        metadata:
-            labels:
-                name: mongodb
-        spec:
-            containers:
-                - name: mongodb
-                  image: mongo
-                  resources:
-                      limits:
-                          memory: "512Mi"
-                          cpu: "500m"
-                  ports:
-                      - containerPort: 27017
-                  env:
-                      - name: MONGO_INITDB_ROOT_USERNAME
-                        value: root
-                      - name: MONGO_INITDB_ROOT_PASSWORD
-                        value: root
+  selector:
+    matchLabels:
+      name: mongodb
+  template:
+    metadata:
+      labels:
+        name: mongodb
+    spec:
+      containers:
+        - name: mongodb
+          image: mongo
+          resources:
+            limits:
+              memory: '512Mi'
+              cpu: '500m'
+          ports:
+            - containerPort: 27017
+          env:
+            - name: MONGO_INITDB_ROOT_USERNAME
+              value: root
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              value: root
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: turingbot
+  labels:
     name: turingbot
-    labels:
-        name: turingbot
 spec:
-    replicas: 1
-    # Selector and template are basically specifying "when i want to take an action, what do i want to target?"
-    # in this case, we only want to target *this* container
-    selector:
-        matchLabels:
-            name: turingbot
-    template:
-        metadata:
-            labels:
-                name: turingbot
-        spec:
-            containers:
-                - name: turingbot
-                  image: turingbot
-                  imagePullPolicy: Never
-                  resources:
-                      limits:
-                          memory: "512Mi"
-                          cpu: "500m"
+  replicas: 1
+  # Selector and template are basically specifying "when i want to take an action, what do i want to target?"
+  # in this case, we only want to target *this* container
+  selector:
+    matchLabels:
+      name: turingbot
+  template:
+    metadata:
+      labels:
+        name: turingbot
+    spec:
+      containers:
+        - name: turingbot
+          image: turingbot
+          imagePullPolicy: Never
+          resources:
+            limits:
+              memory: '512Mi'
+              cpu: '500m'
 # apiVersion: v1
 # kind: Service
 # metadata:
