--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
   "devDependencies": {
     "@types/node": "^20.3.1",
     "0x": "^5.5.0",
-    "jsdoc": "^4.0.2",
-    "clean-jsdoc-theme": "^4.2.7",
     "better-docs": "^2.7.2",
+    "clean-jsdoc-theme": "^4.2.7",
+    "eslint-plugin-prettier": "^5.0.0",
     "gts": "^5.0.0",
-    "prettier": "^2.8.8",
+    "jsdoc": "^4.0.2",
+    "prettier": "^3.0.0",
     "typescript": "~4.7.0"
   }
 }
