Applications: Added the applications module

--- a/config.default.jsonc
+++ b/config.default.jsonc
@@ -82,6 +82,18 @@
     },
     "conch": {
       "enabled": true
+    },
+    "apply": {
+      "enabled": true,
+      // Channel to send the applications to
+      "channel": "",
+      // All questions have a strict 45 character limit
+      "questions": []
+    },
+    "application": {
+      "enabled": true,
+      "applyRoleOnApprove": false,
+      "roleIdOnApprove": ""
     }
   }
 }
