--- a/config.default.jsonc
+++ b/config.default.jsonc
@@ -60,18 +60,9 @@
   You can use this by setting the `permissions` key of each extension
   to an object like this. It's not required for any of these keys to be set.
   ```
-  {
-    // and whatever else a full perms list entails
+  "permissions": {
+    // a list of all possible permission restrictions
     "requiredPerms": ["kick", "ban", "timeout", "manage_roles", "administrator"],
-    // Users takes the highest precedence, then role, then channel, than category
-    // Denied takes precedence over allowed
-    // if nothing is set, than all is enabled by default.
-    // if there's an item in an allowlist, than anything that
-    // doesn't have meet that requirement is denied
-    // if there's an item in a denylist, than 
-    // anything that doesn't match the list is still allowed
-    // if a key is set for an allowlist, than it should not be set
-    // for the deny list, and vice versa
     "allowed": {
         // list of user IDs
         "users": [],
@@ -92,44 +83,21 @@
         // a list of category IDs.
         "categories": [],
     }
-    ```
-
-    Subcommand permissions can be set using the below structure:
-    ```
-    {
-    // example module config
-    "enabled": true,
-    // permissions for this module
-    "permissions": {
-        "allowed": {
-            "channels": ["111111111"]
-        },
-        "submodulePermissions": {
-            // ideally, module permissions should be validated at every layer
-            "foo": {
-                "allowed": {
-                    "roles": ["1231234"]
-                },
-                "denied": {
-                    "users": ["92752544144572416"]
-                }
-            },
-            // 3 layers deep 
-            "submodulePermissions": {
-                "bar": {
-                    "subModulePermissions": {
-                        "bat": {
-                            "allowed": {
-                                "categories": ["1111"]
-                            }
-                        }
-                    }
-                }
-            }
+    // if you also want to restrict permissions per submodule, it can be done as below
+    submodulePermissions: {
+      // each key in this object is the name of a submodule, so for a command like `/factoid all`, 
+      // you could restrict it with a key named `"all"`.
+      "<submodule_name>": {
+        // the same structure can be nested
+        "requiredPerms": [],
+        // you can also nest submodulePermissions to restrict a command 3 layers deep, like "/factoid all html"
+        "submodulePermissions: {
+          "<submodule_name>": {}
         }
+      }
     }
-}
-}
+  }
+    ```
   */
   "modules": {
     "logging": {
