--- a/config.default.jsonc
+++ b/config.default.jsonc
@@ -63,7 +63,7 @@
   "permissions": {
     // a list of all possible permission restrictions
     "requiredPerms": ["kick", "ban", "timeout", "manage_roles", "administrator"],
-    // **ALL IDs MUST BE A STRING**
+    // **ALL IDs MUST BE STRINGS (not numbers)**
     "allowed": {
         // list of user IDs
         "users": [],
@@ -85,7 +85,7 @@
         "categories": [],
     }
     // if you also want to restrict permissions per submodule, it can be done as below
-    submodulePermissions: {
+    "submodulePermissions": {
       // each key in this object is the name of a submodule, so for a command like `/factoid all`, 
       // you could restrict it with a key named `"all"`.
       "<submodule_name>": {
