Adds the botcommand module (#17)
* Bot info: Added the bot info command

* formatting

* removed version info

* Patched some docstrings up

--- a/config.default.jsonc
+++ b/config.default.jsonc
@@ -149,6 +149,9 @@
   "youtube": {
     "enabled": true
   },
+  "bot": {
+    "enabled": true
+  },
   "autopaste": {
     "enabled": true,
     // Make sure the ids are all strings, not numbers
