--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fix": "gts fix"
   },
   "dependencies": {
+    "@types/node-os-utils": "^1.3.1",
     "bufferutil": "^4.0.7",
     "chalk": "^4.1.2",
     "discord.js": "^14.11.0",
@@ -21,6 +22,7 @@
     "jsonc-parser": "^3.2.0",
     "mongodb": "^5.6.0",
     "node": "^19.8.1",
+    "node-os-utils": "^1.3.7",
     "typescript": "^5.0.2",
     "undici": "^5.22.1",
     "utf-8-validate": "^6.0.3",
