--- a/config.default.jsonc
+++ b/config.default.jsonc
@@ -159,6 +159,23 @@
     "maxLength": 100,
     "pasteFooterContent": "",
     "pasteApi": ""
+  },
+  "duck": {
+    "enabled": true,
+    "channels": [],
+    // Times are specified in seconds
+    "minimumSpawn": 30,
+    "maximumSpawn": 180,
+    "runAwayTime": 20,
+    // Timeout on miss
+    "cooldown": 5,
+    // Failure percentages
+    "failRates": {      
+      // Bef and bang
+      "interaction": 50,
+      "kill": 50,
+      "donate": 50
+    }
   }
   }
 }
