fix: wouldn't be a project of mine if i didn't leak a secret

--- a/secrets.default.jsonc
+++ b/secrets.default.jsonc
@@ -2,7 +2,7 @@
 // It contains authentication data
 {
     // The token used to login to discord
-    "discordAuthToken": "MTA5MjEzMTE0OTQzNTkwODI2OQ.G1VRKF.HEOswNI2olKBrlY_znhk3DuDhy2NyqorpFhbac",
+    "discordAuthToken": "YOUR_DISCORD_AUTH_TOKEN_HERE",
     // database credentials
     "mongodb": {
         // If using Atlas, set the protocol to mongodb+srv://, and include a `/` at the end of your database URL
