feat: added mongo+bot docker compose

--- a/secrets.default.jsonc
+++ b/secrets.default.jsonc
@@ -9,8 +9,10 @@
         // Otherwise set it to mongodb://
         "protocol": "mongodb://",
         // the IP address or URL of your mongodb instance
-        "address": "mongodb.example.com",
+        // if using docker compose, set this to `mongo`
+        "address": "mongo",
         // authentication credentials
+        // docker compose default creds are `root`, and `root`, *do not use this in prod*
         "username": "YOUR_MONGO_USERNAME",
         "password": "YOUR_MONGO_PASSWORD"
     },
