fix: default config file cleanups

--- a/config.default.jsonc
+++ b/config.default.jsonc
@@ -76,9 +76,7 @@
       "roleIdOnApprove": ""
     },
     "google": {
-      "enabled": true,
-      "ApiKey": "",
-      "CseId": ""
+      "enabled": true
     },
     // API key is shared with google
     "youtube": {
