Add!: bypass auth feature

--- a/secrets.default.jsonc
+++ b/secrets.default.jsonc
@@ -10,9 +10,12 @@
         "protocol": "mongodb://",
         // the IP address or URL of your mongodb instance
         "address": "mongodb.example.com",
+        // Used to access a database without credentials
+        "localDB": "false",
         // authentication credentials
         "username": "YOUR_MONGO_USERNAME",
-        "password": "YOUR_MONGO_PASSWORD"
+        "password": "YOUR_MONGO_PASSWORD",
+        "dbName": "turingbot"
     },
     // these credentials are shared between the google and youtube modules.
     "google": {
