--- a/secrets.default.jsonc
+++ b/secrets.default.jsonc
@@ -11,7 +11,7 @@
         // the IP address or URL of your mongodb instance
         "address": "mongodb.example.com",
         // Used to access a database without credentials
-        "bypassAuth": "false",
+        "bypassAuth": false,
         // authentication credentials
         "username": "YOUR_MONGO_USERNAME",
         "password": "YOUR_MONGO_PASSWORD",
