Fix: small formatting refactor

--- a/secrets.default.jsonc
+++ b/secrets.default.jsonc
@@ -3,21 +3,21 @@
 {
     // The token used to login to discord
     "discordAuthToken": "YOUR_DISCORD_AUTH_TOKEN_HERE",
-    // database credentials
+    // Database credentials
     "mongodb": {
         // If using Atlas, set the protocol to mongodb+srv://, and include a `/` at the end of your database URL
         // Otherwise set it to mongodb://
         "protocol": "mongodb://",
         // the IP address or URL of your mongodb instance
         "address": "mongodb.example.com",
-        // Used to access a database without credentials
-        "bypassAuth": false,
-        // authentication credentials
+        // The name for the database where bot information will be stored like factoids
+        "dbName": "turingbot",
+        // Authentication credentials
+        // If your server doesn't use authentication credentials, leave these empty: ""
         "username": "YOUR_MONGO_USERNAME",
-        "password": "YOUR_MONGO_PASSWORD",
-        "dbName": "turingbot"
+        "password": "YOUR_MONGO_PASSWORD"
     },
-    // these credentials are shared between the google and youtube modules.
+    // These credentials are shared between the google and youtube modules.
     "google": {
         "apiKey": "YOUR_GOOGLE_API_KEY_HERE",
         "cseId": "YOUR_GOOGLE_CSE_ID_HERE"
