Fix: undefined value

--- a/secrets.default.jsonc
+++ b/secrets.default.jsonc
@@ -10,7 +10,7 @@
         "protocol": "mongodb://",
         // the IP address or URL of your mongodb instance
         "address": "mongodb.example.com",
-        // The name for the database where bot information will be stored like factoids
+        // The name for the database collection the bot will use
         "dbName": "turingbot",
         // Authentication credentials
         // If your server doesn't use authentication credentials, leave these empty: ""
