add docker compose infra for local mongo, refactor command disabled checking (#41)
* fix: fixed more permission validation issues

* feat: added mongo+bot docker compose

---------

Co-authored-by: zleyyij <zleyyij@users.noreply.github.com>

--- a/secrets.default.jsonc
+++ b/secrets.default.jsonc
@@ -9,10 +9,12 @@
         // Otherwise set it to mongodb://
         "protocol": "mongodb://",
         // the IP address or URL of your mongodb instance
-        "address": "mongodb.example.com",
+        // if using docker compose, set this to `mongo`
+        "address": "mongo",
         // The name for the database collection the bot will use
         "dbName": "turingbot",
         // Authentication credentials
+        // docker compose default creds are `root`, and `root`, *do not use this in prod*
         // If your server doesn't use authentication credentials, leave these empty: ""
         "username": "YOUR_MONGO_USERNAME",
         "password": "YOUR_MONGO_PASSWORD"
