Add: Joke module (#53)
* Add: basic joke module

* Add: Core functionality to joke module

* fix: remove random mistype

* Add: Better error handling

* Add: NSFW config flag

* Fix: debug log

* fix!: added suggestions

Now i'm running into an issue where sometimes it fetches the joke perfectly with no issues, but other times i get a `Invalid Form Body` error.

* Fix: Removed undefined errors

I feel so dumb, there was a tiny typo that broke the entire thing, and i forgot to format the response as a string :sob:

* Fix: Remove try catch

@zleyyij wanted it so i implemented it

--- a/config.default.jsonc
+++ b/config.default.jsonc
@@ -32,6 +32,11 @@
   // if the `enabled` key is missing, the extension will be disabled by default, and a warning issued
   // permissions are explained in the production environment doc
   "modules": {
+    "joke": {
+      "enabled": true,
+      // Boolean for if nsfw jokes should be displayed or not
+      "nsfw": false
+    },
     "logging": {
       // restrict this command to people with the `administrator` perm
       "permissions": {
